# projet_geo_num

Projet_geo_num2/: CMakeLists.txt  block.off  gn_rapport_projet.odt
Projet_geo_num2/header/: hoppe.h  kdtree.h  plane.h
Projet_geo_num2/src/: hoppe.cpp  kdtree.cpp  main.cpp  plane.cpp
projet_geo_num/: face.cpp  face.h  halfedge.cpp  halfedge.h  main.cpp  mesh.cpp  mesh.h  node.cpp  node.h  projet_geo_num.pro  sortvertices.h  vec3.cpp  vec3.h  vertex.cpp  vertex.h
